# python-kadmin

./: .dockerignore  .gitignore  Dockerfile  README.md  build.py  pyproject.toml
.github/workflows/: Build.yaml  Test.yaml
src/: PyKAdminPrincipalObject.c
test/: bootstrap_kdb.py  docker-entrypoint.sh  setup.bash  unittests.py
test/kldap/: cn_config.ldif  cn_module.ldif  krb5.conf  schemas.bash  setup.bash
test/stock/: setup.bash
