[tool.poetry]
authors = ["Drew Silcock <drew@drewsilcock.co.uk>", "Russell Jancewicz <russell.jancewicz@gmail.com>"]
maintainers = ["Drew Silcock <drew@drewsilcock.co.uk>"]
description = 'Python module for kerberos admin (kadm5)'
license = "MIT"
name = "kadmin"
packages = [{include = "src"}]
version = "0.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.build]
generate-setup-file = true
script = "build.py"

[classifiers]
"Development Status" = "4 - Beta"
"Environment" = "Console"
"Intended Audience" = ["System Administrators", "Developers"]
"License" = "OSI Approved :: MIT License"
"Operating System" = "POSIX"
"Programming Language" = ["C", "Python", "YACC"]
"Topic" = ["Software Development :: Libraries :: Python Modules", "System :: Systems Administration :: Authentication/Directory"]
